--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ a, a:link, a:visited, a:hover, a:active {
     display: none;
 }
 
-#cartContainer {
+.cartContainer {
     width: 400px;
     background-color: white;
     position: absolute;
@@ -209,30 +209,60 @@ a, a:link, a:visited, a:hover, a:active {
 #checkout-container{
     padding: 2rem;
     width: 100%;
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 1rem;
 }
 
 .checkout-details, .checkout-summary{
     flex-grow: 1;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     border: 1px solid grey;
     border-radius: .5rem;
     padding: 1rem;
-    max-height: 500px;
     background-color: white;
+}
+
+.checkout-details{
+    max-height: 500px;
+}
+
+.checkout-summary{
+    list-style-type: none;
+    height: 100%;
+    margin: 0;
+}
+.checkout-summary img{
+    max-height: 120px;
 }
 
 .checkout-details input{
     width: 100%;
 }
 
-.checkout-summary{
-    flex-grow: 2;
+.checkoutTotal{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid grey;
+    padding: 1rem 1rem 0 1rem;
+}
+.checkoutTotal span{
+    font-size: 1.5rem;
+}
+
+.checkoutProductCard{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.checkoutProductCardDetails{
+    display:grid;
+    grid-template-rows: 1fr 1fr;
 }
