--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,16 @@ header {
     border-bottom: 1px solid black;
 }
 
+.logo-container{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.logo-container a{
+    font-size: 1.25rem;
+}
+
 a, a:link, a:visited, a:hover, a:active {
     color: inherit;
     text-decoration: inherit;
@@ -40,8 +50,14 @@ a, a:link, a:visited, a:hover, a:active {
 .fa-cart-shopping {
 }
 
+.filter-btns{
+    display: flex;
+    gap: .5rem;
+    padding: 1rem;
+}
+
 #products-container {
-    padding: 2rem;
+    padding: 1rem;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -50,7 +66,7 @@ a, a:link, a:visited, a:hover, a:active {
     align-items: center;
 }
 
-.product-card{
+.product-card, .single-product-card {
     flex-grow: 1;
     width: fit-content;
     display: flex;
@@ -62,7 +78,6 @@ a, a:link, a:visited, a:hover, a:active {
     padding: 1rem;
     max-height: 500px;
     background-color: white;
-
 }
 
 .product-card:hover {
@@ -199,14 +214,16 @@ a, a:link, a:visited, a:hover, a:active {
     display: grid;
     justify-content: end;
 }
+
 .cartDiscountedPrice {
     color: red;
 }
+
 .cartPreviousPrice {
     text-decoration: line-through;
 }
 
-#checkout-container{
+#checkout-container {
     padding: 2rem;
     width: 100%;
     display: grid;
@@ -215,7 +232,7 @@ a, a:link, a:visited, a:hover, a:active {
     grid-gap: 1rem;
 }
 
-.checkout-details, .checkout-summary{
+.checkout-details, .checkout-summary {
     flex-grow: 1;
     width: 100%;
     height: 100%;
@@ -228,41 +245,57 @@ a, a:link, a:visited, a:hover, a:active {
     background-color: white;
 }
 
-.checkout-details{
+.checkout-details {
     max-height: 500px;
 }
 
-.checkout-summary{
+.checkout-summary {
     list-style-type: none;
     height: 100%;
     margin: 0;
 }
-.checkout-summary img{
+
+.checkout-summary img {
     max-height: 120px;
 }
 
-.checkout-details input{
+.checkout-details input {
     width: 100%;
 }
 
-.checkoutTotal{
+.checkoutTotal {
     width: 100%;
     display: flex;
     justify-content: space-between;
     border-top: 1px solid grey;
     padding: 1rem 1rem 0 1rem;
 }
-.checkoutTotal span{
+
+.checkoutTotal span {
     font-size: 1.5rem;
 }
 
-.checkoutProductCard{
+.checkoutProductCard {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.checkoutProductCardDetails{
-    display:grid;
+.checkoutProductCardDetails {
+    display: grid;
     grid-template-rows: 1fr 1fr;
+}
+
+.checkout-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.checkout-logo {
+    width: 250px;
 }
